@@ -1,3 +1,10 @@
 #!/usr/bin/env bash
+source $BIOBASH_NATIVE_LIB_PATH/array.sh
+source $BIOBASH_NATIVE_LIB_PATH/check.sh
+source $BIOBASH_NATIVE_LIB_PATH/date.sh
 source $BIOBASH_NATIVE_LIB_PATH/feedback.sh
-source $BIOBASH_NATIVE_LIB_PATH/validate.sh
+source $BIOBASH_NATIVE_LIB_PATH/file.sh
+source $BIOBASH_NATIVE_LIB_PATH/interaction.sh
+source $BIOBASH_NATIVE_LIB_PATH/os.sh
+source $BIOBASH_NATIVE_LIB_PATH/string.sh
+source $BIOBASH_NATIVE_LIB_PATH/variable.sh
