@@ -205,7 +205,7 @@ export BIOBASH_NATIVE_LIB_PATH
 export BIOBASH_NATIVE_LIB
 
 
-export PATH="$BIOBASH_HOME:$BIOBASH_BIN_OS:$BIOBASH_BIN/$PATH"
+export PATH="$BIOBASH_HOME:$BIOBASH_BIN_OS:$BIOBASH_BIN:$PATH"
 
 
 " >> "$HOME"/.bashrc
